# pico-project-template

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  cloneFreeRTOS.sh  cloneRepos.sh
app/: CMakeLists.txt
app/src/: main.c
src/: CMakeLists.txt
tests/: CMakeLists.txt
tests/helloworld/: CMakeLists.txt  helloworld.cpp  main.cpp
tools/cmake/: build.sh  clean.sh  config.sh  runalltests.sh
tools/ozone/adc_console/: adc_console.jdebug
tools/ozone/app/: app.jdebug
tools/ozone/blink/: blink.jdebug
tools/ozone/hello_serial/: hello_serial.jdebug
tools/ozone/i2c_bus_scan/: i2c_bus_scan.jdebug
tools/ozone/lcd_1602_i2c/: lcd_1602_i2c.jdebug
tools/ozone/pico_w_httpd/: pico_w_httpd.jdebug
tools/ozone/pio_onewire/: pio_onewire.jdebug
